# selenium-scraper

./: .replit  README.md  google_maps_scraper.py  places.csv  pyproject.toml  scraper.py  scratch.py  trending.csv  trending.html
