[tool.poetry]
name = "repl_nix_selenium-scraper"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
selenium = "^4.8.2"
pandas = "^1.5.3"
webdriver-manager = "^3.8.5"
parsel = "^1.7.0"
Scrapy = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
